force-app/main/default/objects/Case/fields/Requester_Wait_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Requester_Wait_Time_Minutes__c</fullName>
    <label>Requester Wait Time - Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>