force-app/main/default/objects/Case/fields/RequesterTest__c.field-meta.xml
<CustomField>
    <fullName>RequesterTest__c</fullName>
    <formula>IF(Account.RecordType.DeveloperName !=  &apos;Business&apos; , CASESAFEID(AccountId), NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequesterTest</label>
    <type>Text</type>
</CustomField>