force-app/main/default/objects/Case/fields/Return_Memo__c.field-meta.xml
<CustomField>
    <fullName>Return_Memo__c</fullName>
    <label>Return Memo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>PTE-E</fullName>
            </value>
            <value>
                <fullName>PTE</fullName>
            </value>
            <value>
                <fullName>RF</fullName>
            </value>
            <value>
                <fullName>QC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>