force-app/main/default/objects/Case/fields/Return_Needed__c.field-meta.xml
<CustomField>
    <fullName>Return_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Needed?</label>
    <type>Checkbox</type>
</CustomField>