force-app/main/default/objects/Case/fields/Solved_At__c.field-meta.xml
<CustomField>
    <fullName>Solved_At__c</fullName>
    <label>Solved At</label>
    <type>DateTime</type>
</CustomField>