force-app/main/default/objects/Case/fields/SubDetail__c.field-meta.xml
<CustomField>
    <fullName>SubDetail__c</fullName>
    <label>SubDetail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basket coating</fullName>
            </value>
            <value>
                <fullName>Fryer coating</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Inner basket</fullName>
            </value>
            <value>
                <fullName>Basket</fullName>
            </value>
            <value>
                <fullName>Outer basket</fullName>
            </value>
            <value>
                <fullName>Crisper Plate</fullName>
            </value>
            <value>
                <fullName>Screws</fullName>
            </value>
            <value>
                <fullName>Frame</fullName>
            </value>
            <value>
                <fullName>Screen/Panel</fullName>
            </value>
            <value>
                <fullName>Fryer basket pops out</fullName>
            </value>
            <value>
                <fullName>Coating bubbling</fullName>
            </value>
            <value>
                <fullName>Tray coating bubbling</fullName>
            </value>
            <value>
                <fullName>Back panel</fullName>
            </value>
            <value>
                <fullName>Crumb tray</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Button/Touchscreen/Knob</fullName>
            </value>
            <value>
                <fullName>Coating</fullName>
            </value>
            <value>
                <fullName>Glass door</fullName>
            </value>
            <value>
                <fullName>Rubber feet</fullName>
            </value>
            <value>
                <fullName>Tray</fullName>
            </value>
            <value>
                <fullName>Wire rack</fullName>
            </value>
            <value>
                <fullName>Door</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
            <value>
                <fullName>Plastic part</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Screen</fullName>
            </value>
            <value>
                <fullName>Basket detaching during use</fullName>
            </value>
            <value>
                <fullName>Short Circuit/Trip</fullName>
            </value>
            <value>
                <fullName>Stops working with a bang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>