force-app/main/default/objects/Case/fields/Time_Spent_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Last_Update__c</fullName>
    <formula>TODAY() -  DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent Last Update</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>