force-app/main/default/objects/Case/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Replacement Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>