force-app/main/default/objects/Case/fields/Type_Of_Question__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Question__c</fullName>
    <label>Type Of Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Pricing Issues (retailer)</fullName>
            </value>
            <value>
                <fullName>Product (pre-sale)</fullName>
            </value>
            <value>
                <fullName>Upcoming promotions/discounts</fullName>
            </value>
            <value>
                <fullName>VeSync app</fullName>
            </value>
            <value>
                <fullName>Warranty policy</fullName>
            </value>
            <value>
                <fullName>Warranty registration</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>