force-app/main/default/objects/Case/fields/Type_Of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Shipment__c</fullName>
    <label>Type Of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA Cooper (AACT)</fullName>
            </value>
            <value>
                <fullName>AAA Cooper (XALS)</fullName>
            </value>
            <value>
                <fullName>AAA Cooper (XAMS)</fullName>
            </value>
            <value>
                <fullName>AAA Cooper (XATS)</fullName>
            </value>
            <value>
                <fullName>ABF FREIGHT SYSTEM INC (ABFS)</fullName>
            </value>
            <value>
                <fullName>ABN TRANSIT INC (ABNT)</fullName>
            </value>
            <value>
                <fullName>AZNG</fullName>
            </value>
            <value>
                <fullName>Airborne</fullName>
            </value>
            <value>
                <fullName>Airgroup</fullName>
            </value>
            <value>
                <fullName>Amazon Freight LTL (AMZX)</fullName>
            </value>
            <value>
                <fullName>Amazon Logistics-Vendor DS</fullName>
            </value>
            <value>
                <fullName>Amazon-DF  (UAMDF)</fullName>
            </value>
            <value>
                <fullName>Arrive Logistics (ARVY)</fullName>
            </value>
            <value>
                <fullName>By Air-ETEKCITY株式会社</fullName>
            </value>
            <value>
                <fullName>By Air-Etekcity GmbH</fullName>
            </value>
            <value>
                <fullName>By Air-VESYNC (UK) LIMITED</fullName>
            </value>
            <value>
                <fullName>By Express-ETEKCITY株式会社</fullName>
            </value>
            <value>
                <fullName>By Express-Etekcity GmbH</fullName>
            </value>
            <value>
                <fullName>By Express-VESYNC (UK) LIMITED</fullName>
            </value>
            <value>
                <fullName>By Train-ETEKCITY株式会社</fullName>
            </value>
            <value>
                <fullName>By Train-Etekcity GmbH</fullName>
            </value>
            <value>
                <fullName>By Train-VESYNC (UK) LIMITED</fullName>
            </value>
            <value>
                <fullName>By Truck-ETEKCITY株式会社</fullName>
            </value>
            <value>
                <fullName>By Truck-Etekcity GmbH</fullName>
            </value>
            <value>
                <fullName>By Truck-VESYNC (UK) LIMITED</fullName>
            </value>
            <value>
                <fullName>CAI Logistics (CAIQ) - LTL</fullName>
            </value>
            <value>
                <fullName>CENTRAL TRANSPORT INTERNATIONAL INC (CTII)</fullName>
            </value>
            <value>
                <fullName>CEVA CARRIER (CEVA)</fullName>
            </value>
            <value>
                <fullName>CH Robinson (RBCG) - LTL</fullName>
            </value>
            <value>
                <fullName>CH Robinson (RBIN) - FTL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>