force-app/main/default/objects/Case/fields/Warranty_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Resolution__c</fullName>
    <label>Warranty Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Store Credit</fullName>
            </value>
            <value>
                <fullName>Claim Denied</fullName>
            </value>
            <value>
                <fullName>Product Replacement</fullName>
            </value>
            <value>
                <fullName>Product Replacement (courtesy)</fullName>
            </value>
            <value>
                <fullName>Part Replacement</fullName>
            </value>
            <value>
                <fullName>Part Replacement  (courtesy)</fullName>
            </value>
            <value>
                <fullName>Provided Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Customer Revoked Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>