force-app/main/default/objects/Case/fields/Zendesk_Email__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Email__c</fullName>
    <formula>Requester__r.PersonContact.Zendesk_Email__c</formula>
    <inlineHelpText>Customer Email Address - Zendesk Migrated</inlineHelpText>
    <label>Zendesk Email</label>
    <type>Text</type>
</CustomField>