force-app/main/default/objects/Case/recordTypes/DSRR.recordType-meta.xml
<RecordType>
    <fullName>DSRR</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>DSRR</label>
</RecordType>