force-app/main/default/objects/Case/recordTypes/Fulfillment.recordType-meta.xml
<RecordType>
    <fullName>Fulfillment</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Fulfillment</label>
</RecordType>