force-app/main/default/objects/Case/recordTypes/Questions.recordType-meta.xml
<RecordType>
    <fullName>Questions</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Questions</label>
</RecordType>