force-app/main/default/objects/Case/recordTypes/Warranty.recordType-meta.xml
<RecordType>
    <fullName>Warranty</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Warranty</label>
</RecordType>