force-app/main/default/objects/Case/validationRules/Case_Subject_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Subject_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(
		OR(
			$Setup.VeSync_Bypass_Setting__c.Bypass_All_Validations__c,
			REGEX($Setup.VeSync_Bypass_Setting__c.Bypass_Object_Validations__c , &apos;.*\\bCase\\b.*&apos;),
			Contains($Setup.VeSync_Bypass_Setting__c.Bypass_Validation_Rules__c , &apos;Case_Subject_Validaion&apos;) 
		)

	),
	

       ISBLANK(Subject)  

)</errorConditionFormula>
    <errorDisplayField>Subject</errorDisplayField>
    <errorMessage>Subject must be populated on case</errorMessage>
</ValidationRule>