force-app/main/default/objects/Case/listViews/Fulfillment_Escalations.listView-meta.xml
<ListView>
    <fullName>Fulfillment_Escalations</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Inquiry_Type__c</field>
        <operation>equals</operation>
        <value>Order Inquiry</value>
    </filters>
    <filters>
        <field>Inquiry_Details__c</field>
        <operation>equals</operation>
        <value>Address Change,Cancel Order</value>
    </filters>
    <label>Fulfillment Escalations</label>
</ListView>