force-app/main/default/objects/Case/listViews/High_Priority_Cases.listView-meta.xml
<ListView>
    <fullName>High_Priority_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.PRIORITY</field>
        <operation>equals</operation>
        <value>High Priority</value>
    </filters>
    <label>High Priority Cases</label>
</ListView>