force-app/main/default/objects/Case/listViews/North_America_Cases_Case.listView-meta.xml
<ListView>
    <fullName>North_America_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>North America Cases</label>
    <queue>North_America_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>