force-app/main/default/objects/Case/listViews/Q1_Case.listView-meta.xml
<ListView>
    <fullName>Q1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Europe Cases</label>
    <queue>Europe_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>