force-app/main/default/objects/Case/listViews/Recall_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Recall_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Recall Cases</label>
    <queue>Recall_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>