force-app/main/default/objects/Case/listViews/Support_Vesync_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Support_Vesync_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support@Vesync Cases</label>
    <queue>Support_Vesync_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>